fix: change service handle entity movie instead dto movie so that we can handle that in our controller